--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <p>Ola Git!!</p>
+    <div>
+        <p>
+            Nova informação
+        </p>
+    </div>
 </body>
 </html>
